--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -274,14 +274,6 @@ jobs:
         with:
           sdk: 'stable'
 
-      # Import Code-Signing Certificates and Provisioning Profile
-      - name: Import code-signing certificates
-        uses: apple-actions/import-codesign-certs@v3
-        with:
-          p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
-          p12-password: ${{ secrets.P12_PASSWORD }}
-          provisioning-profile-base64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
-
       - name: Find Flutter Root
         id: flutter_root
         shell: bash
@@ -386,6 +378,28 @@ jobs:
           echo "BUILD_NUMBER=$versionCode" >> $GITHUB_ENV
           echo "VERSION_NAME=1.6.0" >> $GITHUB_ENV
 
+      # Run Fastlane's setup_ci to create a temporary keychain
+      - name: Set up CI Environment with Fastlane
+        run: fastlane run setup_ci force:true
+      - name: Import Certificate to Keychain
+        env:
+          CERTIFICATE_BASE64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+        run: |
+          echo "$CERTIFICATE_BASE64" | base64 --decode > certificate.p12
+          security import certificate.p12 -k $(security default-keychain | tr -d '"') -P "$P12_PASSWORD" -A -T /usr/bin/codesign
+      - name: Verify Keychain Identities
+        run: security find-identity -v -p codesigning $(security default-keychain | tr -d '"')
+      # Decode and Install Provisioning Profile
+      - name: Install Provisioning Profile
+        env:
+          PROVISIONING_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
+        run: |
+          echo "$PROVISIONING_PROFILE_BASE64" | base64 --decode > profile.mobileprovision
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/com.makinglifeeasie.closetconscious.mobileprovision
+      - name: Check Installed Provisioning Profile
+        run: ls ~/Library/MobileDevice/Provisioning\ Profiles/
 
       # Create app_config_prod.json with environment variables
       - name: Create app_config_prod.json
