Remove adapty public sdk and update NSPhotoLibraryUsageDescription from info.plist

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,16 +24,6 @@
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
 	<array>
-		<dict>
-			<key>AdaptyPublicSdkKey</key>
-			<string>public_live_gXprPX4Q.SZNj6c4H5hw76xWUIHTs</string>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>com.googleusercontent.apps.700332017356-eqb1dl327j7r7uld8vt74e43pao681p1</string>
-			</array>
-		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
@@ -41,6 +31,8 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Need to access the camera to upload items.</string>
+	<key>NSPhotoLibraryUsageDescription </key>
+   	<string>Need to access the library to extract photos.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
