--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,7 +31,7 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Need to access the camera to upload items.</string>
-	<key>NSPhotoLibraryUsageDescription </key>
+	<key>NSPhotoLibraryUsageDescription</key>
    	<string>Need to access the library to extract photos.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
@@ -52,5 +52,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
 </dict>
 </plist>
