camera permission in podfile

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,7 +38,9 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  
+
+  pod 'Permission-Camera', :path => '../.symlinks/plugins/permission_handler/ios'
+
   target 'RunnerTests' do
     inherit! :search_paths
   end
