--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   internet_connection_checker_plus: ^2.3.0
   equatable: ^2.0.5
   in_app_review: ^2.0.9
+  table_calendar: ^3.1.3
 flutter_intl:
   enable: true
   path: l10n # Your folder path containing .arb files
