Did a refactoring of outfit review and wear. Outfit review, still need to deal with button state and interactive item grid.
Worked on metadata for monthly calendar metadata, pending more changes for UI, and RPC for images.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -143,6 +143,7 @@ flutter:
 
     - assets/icons/my_outfit/additional_features/
     - assets/icons/my_outfit/outfit_review/
+    - assets/icons/my_outfit/calendar/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
