--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   http: ^1.2.2
   camera: ^0.11.0
   photo_manager: ^3.6.4
+  flutter_image_compress: ^2.4.0
   permission_handler: ^11.3.1
   flutter_signin_button: ^2.0.0
   flutter_bloc: ^8.1.5
