--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
   package_info_plus: ^8.0.0
+  infinite_scroll_pagination: ^5.0.0
   flutter_dotenv: ^5.1.0
   lottie: ^3.1.2
   webview_flutter: ^4.8.0
