--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   supabase_flutter: ^2.8.0
   http: ^1.2.2
   camera: ^0.11.0
+  collection: ^1.18.0
   photo_manager: ^3.6.4
   flutter_image_compress: ^2.4.0
   permission_handler: ^11.3.1
