--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.11.0+1
+version: 1.12.0+1
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -60,6 +60,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   lottie: ^3.1.2
   webview_flutter: ^4.8.0
+  youtube_player_iframe: ^5.2.1
   meta: ^1.11.0
   fpdart: ^1.1.0
   get_it: ^7.7.0
