Updated customization logic, and also did a first draft for notification.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,6 +38,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -108,4 +109,9 @@ android {
 
 flutter {
     source '../..'
+}
+
+dependencies {
+    // ✅ Add this line for Java 8+ feature support
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
 }
