--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   sentry_flutter: ^8.14.1
   in_app_purchase: ^3.2.0
   flutter_local_notifications: ^19.1.0
-  workmanager: ^0.5.2
   timezone: ^0.10.0
   flutter_timezone: ^4.1.0
   logging: ^1.2.0
@@ -54,6 +53,8 @@ dependencies:
   camera: ^0.11.0
   collection: ^1.18.0
   photo_manager: ^3.6.4
+  barcode_widget: ^2.0.4
+  mobile_scanner: ^7.0.0
   flutter_image_compress: ^2.4.0
   permission_handler: ^11.3.1
   flutter_signin_button: ^2.0.0
